@@ -1,3 +1,7 @@
+2008-07-02  Jonathan Gonzalez V.  <zeus@gnu.org>
+
+	* funciones.sql (informacion_producto_venta): Added function.
+
 2008-07-01  Jonathan Gonzalez V.  <zeus@gnu.org>
 
 	* rizoma.structure: Deleted some trash lines. Added drop if exists
